--- a/.github/workflows/render-diagrams.yml
+++ b/.github/workflows/render-diagrams.yml
@@ -1,20 +1,30 @@
-name: generate plantuml
-on: push
+name: Generate UML Diagrams
+
+on:
+  push:
+    paths:
+      - 'docs/diagram/**/*.puml'
+  workflow_dispatch:
+
 jobs:
-  generate_plantuml:
+  render:
     runs-on: ubuntu-latest
-    name: plantuml
+
     steps:
-      - name: checkout
-        uses: actions/checkout@v1
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Render all .puml files under docs/diagram (recursive)
+        run: |
+          mkdir -p docs/diagram-img
+          docker run --rm \
+            -v ${{ github.workspace }}/docs/diagram:/in \
+            -v ${{ github.workspace }}/docs/diagram-img:/out \
+            plantuml/plantuml:1.2024.4 \
+            -failfast -nbthread auto -tpng /in -o /out
+
+      - name: Commit and push rendered diagrams
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          path: docs/diagram
-          fetch-depth: 3
-      - name: plantuml
-        id: plantuml
-        uses: grassedge/generate-plantuml-action@v1.5
-        with:
-          path: docs/diagram-img
-          message: "Render PlantUML files"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          commit_message: "🖼️ Auto-update UML diagrams"
+          file_pattern: docs/diagram-img/*.png
