feat: connected SurfaceType feature to DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=inqool-tennis
 
-spring.datasource.url=jdbc:h2:mem:testdb
+# TODO: uncomment on submission
+#spring.datasource.url=jdbc:h2:mem:tennisdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:./data/tennisdb;DB_CLOSE_DELAY=-1;AUTO_SERVER=true
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.username=sa
@@ -8,6 +10,14 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-# delete later
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.liquibase.enabled=false
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+seedEnabled=true
