feat: implemented Court feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,5 @@ spring.liquibase.enabled=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-seedEnabled=true
+# TODO: change to true on submission
+seedEnabled=false
