feat(tests): implemented RESERVATION feature tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
 spring.application.name=inqool-tennis
-# TODO: uncomment on submission
-#spring.datasource.url=jdbc:h2:mem:tennisdb;DB_CLOSE_DELAY=-1
-spring.datasource.url=jdbc:h2:file:./data/tennisdb;DB_CLOSE_DELAY=-1;AUTO_SERVER=true
+
+spring.datasource.url=jdbc:h2:mem:tennisdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.yaml
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-# TODO: change to true on submission
-seedEnabled=false
+
+seedEnabled=true
