--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
+      file: db/changelog/000-init-schema.yaml
+  - include:
       file: db/changelog/001-add-createdAt.yaml
