--- a/src/main/resources/db/changelog/001-add-createdAt.yaml
+++ b/src/main/resources/db/changelog/001-add-createdAt.yaml
@@ -13,16 +13,16 @@ databaseChangeLog:
                   constraints:
                     nullable: false
         - addColumn:
-            tableName: court_entity
+            tableName: surface_type_entity
             columns:
               - column:
-                  name: updated_at
+                  name: created_at
                   type: timestamp
                   defaultValueComputed: CURRENT_TIMESTAMP
                   constraints:
                     nullable: false
         - addColumn:
-            tableName: surface_type_entity
+            tableName: customer_entity
             columns:
               - column:
                   name: created_at
