feat: user feature done

--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/changelog/000-init-schema.yaml
   - include:
       file: db/changelog/001-add-createdAt.yaml
+  - include:
+      file: db/changelog/002-add-user-table.yaml
