feat: tried implementing auth

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,6 @@ spring.liquibase.enabled=false
 seedEnabled=false
 
 server.port=0
+
+jwt.secret=verysecuresecretthatyoumustchange!
+jwt.expiration=3600000
